--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  text-align: center;
+  justify-content: center;
 }
 
 .btn {
@@ -26,4 +26,16 @@ body {
   padding: 15px;
   width: 300px;
   font-size: 35px;
+}
+
+.btn:hover {
+  opacity: 85%;
+}
+
+.modal-footer {
+  justify-content: center;
+}
+
+.btn-secondary {
+  padding: 5px;
 }
